unpackaged/main/default/objects/ssot__ContactPoint__dlm/ssot__ContactPoint__dlm.object-meta.xml
<CustomObject>
    <label>Contact Point</label>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Contact Point</labelOverride>
        <masterLabel>Contact Point</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityGroup>Contact Point</referenceEntityGroup>
        <referenceEntityName>ContactPoint</referenceEntityName>
        <referenceEntitySubjectArea>Party</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>