unpackaged/main/default/objects/ssot__ContactPoint__dlm/fields/Onboard_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Date__c</fullName>
    <label>Onboard Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Onboard Date</labelOverride>
        <masterLabel>Onboard Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>