unpackaged/main/default/objects/ssot__ContactPoint__dlm/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <label>Risk Profile</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Risk Profile</labelOverride>
        <masterLabel>Risk Profile</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>